tests/invalid/duplicate_var.f77
PROGRAM DUPLICADA
INTEGER X
REAL X
X = 1
END
